--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
         </div>
     </nav>
 
-<header id="showcase"></header>
-
+    <header id="showcase">
+        <h1>EXPLORE</h1>
+        <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt numquam id delectus odit aliquid nisi
+            corrupti obcaecati possimus quae, fugiat repellendus explicabo doloribus voluptate error vel necessitatibus
+            magni quia quo.</h3>
+        <div class="shade"></div>
+        <button id="main-btn">READ MORE</button>
+    </header>
 
 </body>
 
 <script src="app.js"></script>
 
 </html>
-
-
